Gizmo utils - add more convenient methods for list, set and map
- counterparts for List.of(), List.of(...), List.copyOf(Collection),
Set.of(), Set.of(...), Set.copyOf(Collection), Map.of() and
Map.copyOf(Map)